@@ -1,3 +1,8 @@
+==== 01/01/2015
+
+- Grosse optimisation générale (scénario et dashboard)
+- Ajout #IP# et #hostname# dans les tags de scénario
+
 ==== 22/12/2014
 
 - Possibilité dans les scénarios de desactiver une action sans la supprimer
